# ComfyUI-JM-Gemini-API

./: .gitignore  README.md  README_CN.md  __init__.py  diagnose.py  install_windows.bat  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
config/: README_Cookie配置说明.md  gemini_cookies.json
example_workflows/: gemini-nano-banana-workflow.json  gemini-veo3-workflow.json
nodes/: README.md  __init__.py  jm_gemini_image_node.py  jm_gemini_node.py  jm_gemini_reverse_node.py  jm_gemini_video_node.py  utils.py
nodes/gemini_reverse/: config.py
