[project]
name = "jm-gemini-api"
description = "A custom node for ComfyUI that generates images using Google's Gemini API, supporting both text-to-image and image-to-image generation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Google AI 相关依赖", "google-genai==1.52.0", "google-auth>=2.40.0", "google-api-core>=2.25.0", "googleapis-common-protos>=1.70.0", "google-auth-httplib2>=0.2.0", "# 图像处理", "Pillow>=10.0.0", "# PyTorch (如果 ComfyUI 已安装则会跳过)", "torch", "torchvision", "numpy", "# 网络请求 (包含 SOCKS5 代理支持)", "httpx[socks]"]

[project.urls]
Repository = "https://github.com/synthetai/ComfyUI-JM-Gemini-API"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/synthetai/ComfyUI-JM-Gemini-API/wiki"
"Bug Tracker" = "https://github.com/synthetai/ComfyUI-JM-Gemini-API/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-JM-Gemini-API"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

